K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default   
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
